WanaLyzer/out/numpy/typing/tests/data/fail/einsumfunc.pyi
import numpy as np
from typing import Any

AR_i: np.ndarray[Any, np.dtype[np.int64]]
AR_f: np.ndarray[Any, np.dtype[np.float64]]
AR_m: np.ndarray[Any, np.dtype[np.timedelta64]]
AR_U: np.ndarray[Any, np.dtype[np.str_]]
